sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:7: error: '(' expected but identifier found.
      if getValue(k)<M {
         ^AlgSelectionSort:11: error: illegal start of simple expression
    }
    ^